fixed the semantic html and compiled for better readability

--- a/style.css
+++ b/style.css
@@ -12,24 +12,24 @@ p{
     font-size: 16px;
 }
 
-.top{
+.head {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color:#ffffff;
 }
 
-.top h1{
+.head h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.top h1 .seo{
+.head h1 .seo {
     color: rgb(190, 188, 188);
 }
 
 
-.top div{
+.head nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -37,11 +37,11 @@ p{
     font-size: 20px;
 }
 
-.top div ul{
+.head nav ul {
     list-style-type: none;
 }
 
-.top div ul li{
+.head nav ul li {
     display: inline-block;
     padding: 10px;
 }
@@ -63,7 +63,6 @@ p{
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url(../BabiesFirstWebsite/images/digital-marketing-meeting.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -84,7 +83,7 @@ p{
     margin-left: 20px;
 }
 
-.benefits {
+.benefits { 
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -92,58 +91,28 @@ p{
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-lead {
+    background-color: #2589bd;    
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+.all-the-benefits { /* compiled all benefits into one class for better readability */
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.main-points {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -152,50 +121,15 @@ p{
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.main-points img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.main-points h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
